--- a/_data/galleries.yml
+++ b/_data/galleries.yml
@@ -1,6 +1,8 @@
 - title: I
   href: gallery_1.html
   thumbnail: assets/images/thumbnails/DSF2190.JPG
+  subtitle: Mater Dolorosa
+  subsubtitle: 1995
 
 # - title: II
 #   href: gallery_2.html
